# PAIRSIM_gym

./: .gitmodules  README.md  data.csv
src/MPC/: CMakeLists.txt  package.xml
src/MPC/scripts/: MPC.py  MPC_bicycle.py  long_mpc.py
src/accel_intf/config/: lvms_param.yaml  params.yaml
src/accel_intf/include/: acceleration_interface.h  acceleration_interface_node.hpp  rtwtypes.h
src/accel_intf/src/: acceleration_interface.cpp  acceleration_interface_data.cpp  acceleration_interface_node.cpp
src/accel_intf/test/: test_braking.cpp  testing_helpers.hpp
src/pure_pursuit/: package.xml  setup.py
src/pure_pursuit/pure_pursuit/: config_monza_map.yaml  monza_waypoints.csv  pure_pursuit_node.py  waypoint_follow.py
src/pure_pursuit/pure_pursuit/__pycache__/: waypoint_follow.first_point_on_trajectory_intersecting_circle-49.py310.1.nbc  waypoint_follow.first_point_on_trajectory_intersecting_circle-49.py310.nbi  waypoint_follow.get_actuation-133.py310.1.nbc  waypoint_follow.get_actuation-133.py310.nbi  waypoint_follow.nearest_point_on_trajectory-15.py310.1.nbc  (+1 more)
src/repub/: package.xml  setup.py
src/repub/launch/: launch_republisher.launch.py
src/repub/repub/: repub_node.py
src/simulator/: CMakeLists.txt  package.xml
src/simulator/config/: ekf.yaml  odometry.txt  pretend_gps_pose.txt
src/simulator/launch/: launch_controller.launch.py  launch_planner.launch.py  launch_republisher.launch.py  launch_sim.launch.py
src/simulator/maps/: raceline_traj_with_velocity_monza_edited.csv
src/simulator/scripts/: IMS_orig.csv  monza_centerline_fixed_nonscaled.csv  planner_emulator.py  putnam.csv  traj_race_cl.csv  transform_path.py
src/simulator/src/: straight_path.slx
src/wheel_odometer_integrator/: CMakeLists.txt  package.xml
src/wheel_odometer_integrator/config/: odom.yaml
src/wheel_odometer_integrator/include/wheel_odometer_integrator/: wheel_odometer_integrator.hpp
src/wheel_odometer_integrator/launch/: odom_fusion.launch.py
src/wheel_odometer_integrator/src/: wheel_odometer_integrator.cpp
